# agentic-loan-officer

./: LICENSE  README.md  README.txt  pyproject.toml  requirements.txt  stuff.txt
src/: main.py
src/agents/: __init__.py  coordinator.py  emailer.py  recommendation.py  repayment_predictor.py
src/lab/: 1_lab1.ipynb  3_lab3 copy 2.ipynb  3_lab3 copy.ipynb  3_lab3.ipynb
src/lab/utils/: AgentPrompt.py  NLExtractor.py  ValidationModels.py
src/models/: validation_models.py
src/utils/: agent_prompt.py  nl_extractor.py
srv/lab/: 2_lab2.ipynb
tests/: test_coordinator.py  test_emailer.py  test_nl_extractor.py  test_recommendation.py  test_repayment_predictor.py  test_validation_models.py
