[project]
name = "agentic-loan-officer"
version = "0.1.0"
description = "Agentic loan office assistant"
readme = "README.md"
authors = [
    {name = "Ope Mesonrale", email = "seunope2004@yahoo.co.uk"}
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "google-genai>=1.14.0",
    "gradio>=5.22.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.6",
    "playwright>=1.51.0",
    "python-dotenv>=1.0.1",
    "sendgrid>=6.11.0",
    "setuptools>=78.1.0",
    "spacy>=3.7.2",
    "word2number>=1.1",
    "numpy>=1.26.0,<1.27.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",

]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools.package-data]
"en_core_web_sm" = ["*"]
